--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@source "../node_modules/flowbite-datepicker";
 /* @import "tailwindcss/preflight";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities"; */
@@ -87,6 +88,22 @@ button{
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+input{
+  outline: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 @keyframes slideIn {
