--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities"; */
 
-*{
+* {
   font-family: 'Inter';
 }
 
@@ -29,49 +29,52 @@
   background: #555;
 }
 
-.text-primary{
+.text-primary {
   color: #FF0000 !important;
 }
 
-.bg-primary{
+.bg-primary {
   background-color: #FF0000;
 }
 
-.text-secondary{
+.text-secondary {
   color: #B88383;
 }
 
-.border-primary{
+.border-primary {
   border-color: rgba(199, 194, 194, 1) !important;
 }
 
-.bg-secondary{
+.bg-secondary {
   background-color: #B88383;
 }
 
-.text-primary-dark{
-  color : #C30000
+.text-primary-dark {
+  color: #C30000
 }
 
-.form-icon{
+.form-icon {
   color: #787878;
 }
-button{
+
+button {
   cursor: pointer;
   outline: none;
 }
-.box-shadow{
+
+.box-shadow {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.box-shadow-full{
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 22px 0px;
-}
-.box-shadow-right-full{
+.box-shadow-full {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 22px 0px;
 }
 
-.transform-translate{
+.box-shadow-right-full {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 22px 0px;
+}
+
+.transform-translate {
   transform: translate(-50%, -50%) !important;
 }
 
@@ -80,20 +83,20 @@ button{
 } */
 /* Toast */
 
-.text-list{
+.text-list {
   transition: .3s all;
-  color : #6D6D6D
+  color: #6D6D6D
 }
 
-.navbar .text-list:hover{
+.navbar .text-list:hover {
   color: #FF0000;
 }
 
-.bg-overlay{
+.bg-overlay {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.back-overlay{
+.back-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -101,7 +104,7 @@ button{
   height: 100%;
 }
 
-input{
+input {
   outline: none;
 }
 
@@ -123,6 +126,7 @@ input[type=number] {
     opacity: 0;
     visibility: hidden;
   }
+
   to {
     transform: translateX(0);
     opacity: 1;
@@ -136,6 +140,7 @@ input[type=number] {
     opacity: 1 !important;
     visibility: visible !important;
   }
+
   to {
     transform: translateX(100%);
     opacity: 0 !important;
@@ -155,33 +160,34 @@ input[type=number] {
   animation: slideOut 0.5s ease-in forwards;
 }
 
-.bg-circle{
+.bg-circle {
   background-color: rgba(253, 234, 234, .5);
 }
 
-.text-web-primary{
+.text-web-primary {
   color: #C30000;
 }
 
-.bg-web-primary{
+.bg-web-primary {
   background-color: #C30000;
 }
 
-.swiper-slid{
+.swiper-slid {
   padding: 0 25px !important;
 }
 
-.swiper-button-next{
+.swiper-button-next {
   position: absolute !important;
-  right:  0px !important;
+  right: 0px !important;
 }
 
-.swiper-button-prev{
+.swiper-button-prev {
   position: absolute !important;
-  left:  0px !important;
+  left: 0px !important;
 }
 
-.swiper-button-next:after, .swiper-button-prev:after {
+.swiper-button-next:after,
+.swiper-button-prev:after {
   font-family: swiper-icons;
   font-size: 20px !important;
   text-transform: none !important;
@@ -196,23 +202,47 @@ input[type=number] {
 
 /* CSS Modal Animations */
 @keyframes modalFadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes modalFadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes modalScaleIn {
-  from { transform: scale(0.8); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 @keyframes modalScaleOut {
-  from { transform: scale(1); opacity: 1; }
-  to { transform: scale(0.8); opacity: 0; }
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  to {
+    transform: scale(0.8);
+    opacity: 0;
+  }
 }
 
 .modal-overlay {
@@ -235,7 +265,7 @@ input[type=number] {
 
 .circle-1 {
   border: 4px solid;
-  border-right: 4px solid #FF0000 ;
+  border-right: 4px solid #FF0000;
   border-left: 4px solid transparent;
   border-top: 4px solid transparent;
   border-bottom: 4px transparent;
@@ -254,21 +284,21 @@ input[type=number] {
 
 @keyframes animate_1 {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-      transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
 
 @keyframes animate_2 {
   0% {
-      transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -278,148 +308,154 @@ input[type=number] {
 
 @media (min-width: 100px) and (max-width: 200px) {
 
-  .dash-3{
+  .dash-3 {
     top: 830px;
   }
 
-  .dash-1{
+  .dash-1 {
     top: 185px;
   }
 
-  .dash-2{
+  .dash-2 {
     top: 508px;
   }
-  
-  .banner .title h1{
+
+  .banner .title h1 {
     font-size: 20px;
   }
 
-  .banner .sub-title span{
+  .banner .sub-title span {
     font-size: 18px;
   }
 }
 
 @media (min-width: 201px) and (max-width: 279px) {
 
-  .dash-3{
+  .dash-3 {
     top: 775px;
     height: 250px;
   }
 
-  .dash-1{
+  .dash-1 {
     top: 185px;
   }
 
-  .dash-2{
+  .dash-2 {
     top: 490px;
   }
-  
-  .banner .title h1{
+
+  .banner .title h1 {
     font-size: 20px;
   }
 
-  .banner .sub-title span{
+  .banner .sub-title span {
     font-size: 18px;
   }
 }
 
-@media (min-width: 280px) and (max-width: 349px){
-  .dash-3{
+@media (min-width: 280px) and (max-width: 349px) {
+  .dash-3 {
     top: 580px;
     height: 230px;
   }
 
-  .dash-2{
+  .dash-2 {
     top: 350px;
     height: 230px;
   }
 
-  .ham-burger{
+  .ham-burger {
     width: 22px;
   }
 
-  .banner{
+  .banner {
     background-position: 50% 50%;
   }
 }
 
-@media (min-width: 350px) and  (max-width: 449px){
-  .dash-3{
+@media (min-width: 350px) and (max-width: 449px) {
+  .dash-3 {
     top: 570px;
     height: 230px;
   }
 
-  .dash-2{
+  .dash-2 {
     top: 360px;
   }
 
-  .ham-burger{
+  .ham-burger {
     width: 23px;
   }
 
-  .banner{
+  .banner {
     background-position: 50% 50%;
   }
 }
 
-@media (min-width: 450px) and  (max-width: 460px){
-  .dash-3{
+@media (min-width: 450px) and (max-width: 460px) {
+  .dash-3 {
     top: 580px;
   }
-  .ham-burger{
+
+  .ham-burger {
     width: 28px;
   }
+
   .banner .title {
     width: 62%;
     text-align: left;
   }
 
-  .banner-btn{
+  .banner-btn {
     text-align: left;
   }
 
   .banner .sub-title {
     text-align: left;
   }
-  .banner{
+
+  .banner {
     background-position: 50% 50%;
   }
 }
 
 @media (min-width: 450px) and (max-width: 766px) {
-  .dash-1{
-    top : 111px
+  .dash-1 {
+    top: 111px
   }
 
-  .dash-2{
-    top : 320px
+  .dash-2 {
+    top: 320px
   }
 
-  .dash-1{
-    top : 111px
+  .dash-1 {
+    top: 111px
   }
-  .ham-burger{
+
+  .ham-burger {
     width: 28px;
   }
+
   .banner .title {
     width: 62%;
     text-align: left;
   }
 
-  .banner-btn{
+  .banner-btn {
     text-align: left;
   }
 
   .banner .sub-title {
     text-align: left;
   }
-  .banner{
+
+  .banner {
     background-position: 50% 50%;
   }
 }
 
 @media (min-width: 768px) {
-  .ham-burger{
+  .ham-burger {
     width: 28px;
   }
 
@@ -427,13 +463,13 @@ input[type=number] {
     width: 60%;
   }
 
-  .banner{
+  .banner {
     background-position: 100% 100%;
   }
 }
 
 @media (min-width: 820px) {
-  .md-box-shadow{
+  .md-box-shadow {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
 }
@@ -444,3 +480,6 @@ input[type=number] {
   }
 }
 
+.shadow-lg {
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
